--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mongodb-js/charts-embed-dom": "^3.3.1",
+    "@react-google-maps/api": "^2.19.3",
+    "chart.js": "^4.4.4",
     "framer-motion": "^11.3.22",
+    "mongoose": "^8.5.3",
     "next": "14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
